fixed glowing ribbon

--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -31,7 +31,7 @@
     text-shadow: 0px 0px 5px rgb(0, 0, 0, 0.9);
     color: white;
     width: 100%;
-    bottom: 0;
+    bottom: 5px;
     position: absolute;
     transition: opacity ease .3s, background-color ease .3s;
 }
