fixed layout style

--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -182,6 +182,8 @@
     background-size: contain;
     background-position: bottom;
     position: relative;
+}
+.pd-img-raised {
     box-shadow: -5px 0px 10px rgb(0, 0, 0, 0.2);
 }
 .pd-details {
