--- a/views/admin.pug
+++ b/views/admin.pug
@@ -2,6 +2,7 @@ extends layout
 
 block links
   link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/css/pikaday.min.css')
+  link(rel='stylesheet', href='https://cdn.datatables.net/1.13.2/css/dataTables.bootstrap4.min.css')
 
 block scripts
   script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js')
@@ -16,6 +17,8 @@ block scripts
   script(src='https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.0.0/js/jquery.fileupload-image.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.0.0/js/jquery.fileupload-validate.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/cloudinary-jquery-file-upload/2.6.3/cloudinary-jquery-file-upload.min.js')
+  script(src='https://cdn.datatables.net/1.13.2/js/jquery.dataTables.min.js')
+  script(src='https://cdn.datatables.net/1.13.2/js/dataTables.bootstrap4.min.js')
   script(src='/js/admin.build.min.js')
 
 
