added cancel card-payment button in card payment screen

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -94,7 +94,7 @@ main {
     left: 22px;
     width: 156px;
 }
-.finish-screen .card-header {
+.finish-screen .card-header, .payment-methods .card-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
