--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -99,6 +99,9 @@ main {
     justify-content: space-between;
     align-items: center;
 }
+.card-header h5, .card-header button {
+    margin: 0;
+}
 .selection {
     width: 100%;
     max-width: 720px;
